k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-ddos-backend
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anti-ddos-backend
  template:
    metadata:
      labels:
        app: anti-ddos-backend
    spec:
      containers:
      - name: backend
        # Replaced dynamically by kustomize
        image: backend-image
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: anti-ddos-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
